[package]
name = "bevy_gltf_export"
version = "0.1.0"
edition = "2021"

[dependencies]
# bevy TODO see if we can strip these
bevy = "0.12.0"

# Note, keep this in track with the upstream bevy_gltf dependency
gltf = { version = "1.3.0", default-features = false, features = [
    "KHR_lights_punctual",
    "KHR_materials_transmission",
    "KHR_materials_ior",
    "KHR_materials_volume",
    "KHR_materials_unlit",
    "KHR_materials_emissive_strength",
    "extras",
    "names",
    "utils",
] }
gltf-json = "1.3.0"
thiserror = "1.0"
base64 = "0.13.0"
percent-encoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
