[package]
name = "bevy_gltf_export"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_asset = "0.12.0"
bevy_pbr = "0.12.0"
bevy_render = "0.12.0"
bevy_transform = "0.12.0"

# Note, keep this in track with the upstream bevy_gltf dependency
gltf = { version = "1.3.0", default-features = false, features = [
    "KHR_lights_punctual",
    "KHR_materials_unlit",
    "extras",
    "names",
    "utils",
] }
gltf-json = "1.3.0"
thiserror = "1.0"
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
